--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.2.0",
     "angular-feather": "^6.5.0",
     "bootstrap": "^5.3.1",
     "feather-icons": "^4.29.1",
+    "ngx-sweetalert2": "^0.2.7",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.27",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
